# template-fastapi-next-agent

./: .gitignore  README.md  ideas.md  pyproject.toml
src/: main.py
src/api/v1/: __init__.py  auth.py  chat.py  system_prompts.py
src/config/: env.py  models.py
src/core/middlewares/: logging.py
src/core/security/: dependencies.py
src/db/: memory.py  system_prompts.py
src/frontend/: package-lock.json  package.json  tsconfig.json
src/frontend/app/: globals.css  layout.tsx  page.tsx
src/frontend/app/chat/: layout.tsx  page.tsx
src/frontend/app/chat/components/: ChatClient.tsx
src/frontend/app/chat/components/modules/: ChatInput.tsx  ChatSidebar.tsx  CodeBlock.tsx  FileUpload.tsx  ImageModal.tsx  ToolReturnViewer.tsx
src/frontend/app/chat/services/: api.ts
src/frontend/app/chat/types/: chat.ts
src/frontend/app/chat/utils/: export.ts  markdown.tsx
src/frontend/app/components/: ConditionalLayout.tsx  config.tsx  sidebar.tsx
src/frontend/app/components/ui/: slider.tsx
src/llm/: agent_old.py  chat.py  history.py  prompt.py
src/llm/tools/: __init__.py  calculator.py  search.py  settings.py
src/llm/tools/search_services/: google.py
src/utils/: file_processor.py  infisical.py  parser.py
